flex/engines/graph_db/grin/include/rust/grin_all.rs

extern "C" {
    pub fn grin_get_edge_property_datatype(
        arg1: GRIN_GRAPH,
        arg2: GRIN_EDGE_PROPERTY,
    ) -> GRIN_DATATYPE;
}
extern "C" {
    pub fn grin_get_edge_property_value_of_int32(
        arg1: GRIN_GRAPH,
        arg2: GRIN_EDGE,
        arg3: GRIN_EDGE_PROPERTY,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn grin_get_edge_property_value_of_uint32(
        arg1: GRIN_GRAPH,
        arg2: GRIN_EDGE,
        arg3: GRIN_EDGE_PROPERTY,
    ) -> ::std::os::raw::c_uint;
}
extern "C" {
    pub fn grin_get_edge_property_value_of_int64(
        arg1: GRIN_GRAPH,
        arg2: GRIN_EDGE,
        arg3: GRIN_EDGE_PROPERTY,
    ) -> ::std::os::raw::c_longlong;
}
extern "C" {
    pub fn grin_get_edge_property_value_of_uint64(
        arg1: GRIN_GRAPH,
        arg2: GRIN_EDGE,
        arg3: GRIN_EDGE_PROPERTY,
    ) -> ::std::os::raw::c_ulonglong;
}
extern "C" {
    pub fn grin_get_edge_property_value_of_float(
        arg1: GRIN_GRAPH,
        arg2: GRIN_EDGE,
        arg3: GRIN_EDGE_PROPERTY,
    ) -> f32;
}
extern "C" {
    pub fn grin_get_edge_property_value_of_double(
        arg1: GRIN_GRAPH,
        arg2: GRIN_EDGE,
        arg3: GRIN_EDGE_PROPERTY,
    ) -> f64;
}
extern "C" {
    pub fn grin_get_edge_property_value_of_string(
        arg1: GRIN_GRAPH,
        arg2: GRIN_EDGE,
        arg3: GRIN_EDGE_PROPERTY,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn grin_get_edge_property_value_of_date32(
        arg1: GRIN_GRAPH,
        arg2: GRIN_EDGE,
        arg3: GRIN_EDGE_PROPERTY,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn grin_get_edge_property_value_of_time32(
        arg1: GRIN_GRAPH,
        arg2: GRIN_EDGE,
        arg3: GRIN_EDGE_PROPERTY,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn grin_get_edge_property_value_of_timestamp64(
        arg1: GRIN_GRAPH,
        arg2: GRIN_EDGE,
        arg3: GRIN_EDGE_PROPERTY,
    ) -> ::std::os::raw::c_longlong;
}
extern "C" {
    pub fn grin_get_edge_type_from_property(
        arg1: GRIN_GRAPH,
        arg2: GRIN_EDGE_PROPERTY,
    ) -> GRIN_EDGE_TYPE;
}
extern "C" {
    pub fn grin_get_edge_property_value(
        arg1: GRIN_GRAPH,
        arg2: GRIN_EDGE,
        arg3: GRIN_EDGE_PROPERTY,
    ) -> *const ::std::os::raw::c_void;
}
extern "C" {
    #[doc = " @brief Get the vertex property list of the graph.\n This API is only available for property graph.\n @param GRIN_GRAPH The graph.\n @return The vertex property list."]
    pub fn grin_get_vertex_property_list_by_type(
        arg1: GRIN_GRAPH,
        arg2: GRIN_VERTEX_TYPE,
    ) -> GRIN_VERTEX_PROPERTY_LIST;
}
extern "C" {
    pub fn grin_get_vertex_property_list_size(
        arg1: GRIN_GRAPH,
        arg2: GRIN_VERTEX_PROPERTY_LIST,
    ) -> usize;
}
extern "C" {
    pub fn grin_get_vertex_property_from_list(
        arg1: GRIN_GRAPH,
        arg2: GRIN_VERTEX_PROPERTY_LIST,
        arg3: usize,
    ) -> GRIN_VERTEX_PROPERTY;
}
extern "C" {
    pub fn grin_create_vertex_property_list(arg1: GRIN_GRAPH) -> GRIN_VERTEX_PROPERTY_LIST;
}
extern "C" {
    pub fn grin_destroy_vertex_property_list(arg1: GRIN_GRAPH, arg2: GRIN_VERTEX_PROPERTY_LIST);
}
extern "C" {
    pub fn grin_insert_vertex_property_to_list(
        arg1: GRIN_GRAPH,
        arg2: GRIN_VERTEX_PROPERTY_LIST,
        arg3: GRIN_VERTEX_PROPERTY,
    ) -> bool;
}
extern "C" {
    #[doc = " @brief Get the vertex property handle by id.\n This API is enabled by ``GRIN_TRAIT_NATURAL_ID_FOR_VERTEX_PROPERTY``,\n meaning that the storage has naturally increasing ids for vertex properties\n under a certain vertex type.\n @param GRIN_GRAPH The graph.\n @param GRIN_VERTEX_TYPE The vertex type.\n @param GRIN_VERTEX_PROPERTY_ID The vertex property id.\n @return The vertex property handle."]
    pub fn grin_get_vertex_property_by_id(
        arg1: GRIN_GRAPH,
        arg2: GRIN_VERTEX_TYPE,
        arg3: GRIN_VERTEX_PROPERTY_ID,
    ) -> GRIN_VERTEX_PROPERTY;
}
extern "C" {
    #[doc = " @brief Get the vertex property's natural id.\n This API is enabled by ``GRIN_TRAIT_NATURAL_ID_FOR_VERTEX_PROPERTY``,\n meaning that the storage has naturally increasing ids for vertex properties\n under a certain vertex type.\n @param GRIN_GRAPH The graph.\n @param GRIN_VERTEX_TYPE The vertex type.\n @param GRIN_VERTEX_PROPERTY The vertex property handle.\n @return The vertex property id."]
    pub fn grin_get_vertex_property_id(
        arg1: GRIN_GRAPH,
        arg2: GRIN_VERTEX_TYPE,
        arg3: GRIN_VERTEX_PROPERTY,
    ) -> GRIN_VERTEX_PROPERTY_ID;
}
extern "C" {
    pub fn grin_get_edge_property_list_by_type(
        arg1: GRIN_GRAPH,
        arg2: GRIN_EDGE_TYPE,
    ) -> GRIN_EDGE_PROPERTY_LIST;
}
extern "C" {
    pub fn grin_get_edge_property_list_size(
        arg1: GRIN_GRAPH,
        arg2: GRIN_EDGE_PROPERTY_LIST,
    ) -> usize;
}
extern "C" {
    pub fn grin_get_edge_property_from_list(
        arg1: GRIN_GRAPH,
        arg2: GRIN_EDGE_PROPERTY_LIST,
        arg3: usize,
    ) -> GRIN_EDGE_PROPERTY;
}
extern "C" {
    pub fn grin_create_edge_property_list(arg1: GRIN_GRAPH) -> GRIN_EDGE_PROPERTY_LIST;
}
extern "C" {
    pub fn grin_destroy_edge_property_list(arg1: GRIN_GRAPH, arg2: GRIN_EDGE_PROPERTY_LIST);
}
extern "C" {
    pub fn grin_insert_edge_property_to_list(
        arg1: GRIN_GRAPH,
        arg2: GRIN_EDGE_PROPERTY_LIST,
        arg3: GRIN_EDGE_PROPERTY,
    ) -> bool;
}
extern "C" {
    pub fn grin_get_edge_property_by_id(
        arg1: GRIN_GRAPH,
        arg2: GRIN_EDGE_TYPE,
        arg3: GRIN_EDGE_PROPERTY_ID,
    ) -> GRIN_EDGE_PROPERTY;
}
extern "C" {
    #[doc = " We must specify the edge type here, because the edge property id is unique only under a specific edge type"]
    pub fn grin_get_edge_property_id(
        arg1: GRIN_GRAPH,
        arg2: GRIN_EDGE_TYPE,
        arg3: GRIN_EDGE_PROPERTY,
    ) -> GRIN_EDGE_PROPERTY_ID;
}
extern "C" {
    pub fn grin_destroy_row(arg1: GRIN_GRAPH, arg2: GRIN_ROW);
}
extern "C" {
    pub fn grin_get_int32_from_row(
        arg1: GRIN_GRAPH,
        arg2: GRIN_ROW,
        arg3: usize,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn grin_get_uint32_from_row(
        arg1: GRIN_GRAPH,
        arg2: GRIN_ROW,
        arg3: usize,
    ) -> ::std::os::raw::c_uint;
}
extern "C" {
    pub fn grin_get_int64_from_row(
        arg1: GRIN_GRAPH,
        arg2: GRIN_ROW,
        arg3: usize,
    ) -> ::std::os::raw::c_longlong;
}
extern "C" {
    pub fn grin_get_uint64_from_row(
        arg1: GRIN_GRAPH,
        arg2: GRIN_ROW,
        arg3: usize,
    ) -> ::std::os::raw::c_ulonglong;
}
extern "C" {
    pub fn grin_get_float_from_row(arg1: GRIN_GRAPH, arg2: GRIN_ROW, arg3: usize) -> f32;
}
extern "C" {
    pub fn grin_get_double_from_row(arg1: GRIN_GRAPH, arg2: GRIN_ROW, arg3: usize) -> f64;
}
extern "C" {
    pub fn grin_get_string_from_row(
        arg1: GRIN_GRAPH,
        arg2: GRIN_ROW,
        arg3: usize,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn grin_get_date32_from_row(
        arg1: GRIN_GRAPH,
        arg2: GRIN_ROW,
        arg3: usize,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn grin_get_time32_from_row(
        arg1: GRIN_GRAPH,
        arg2: GRIN_ROW,
        arg3: usize,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn grin_get_timestamp64_from_row(
        arg1: GRIN_GRAPH,
        arg2: GRIN_ROW,
        arg3: usize,
    ) -> ::std::os::raw::c_longlong;
}
extern "C" {
    #[doc = " @brief Create a row.\n Row works as carrier of property values in GRIN.\n It is a pure value array, and users can only get the value by the array index.\n That means users should understand the property that each value is\n representing when using the row.\n Currently rows are used in two scenarios:\n 1. Users can create a row of values for primary keys properties,\n and then query the vertex/edge using the row if pk indexing is enabled.\n 2. Users can get the row of values for the entire property list of\n a vertex/edge in one API ``grin_get_vertex_row`` or ``grin_get_edge_row``.\n However this API is not recommended if the user only wants to get the\n properties values, in which case, the user can get property values\n one-by-one using the APIs like ``grin_get_vertex_property_value_of_int32``."]
    pub fn grin_create_row(arg1: GRIN_GRAPH) -> GRIN_ROW;
}
extern "C" {
    pub fn grin_insert_int32_to_row(
        arg1: GRIN_GRAPH,
        arg2: GRIN_ROW,
        arg3: ::std::os::raw::c_int,
    ) -> bool;
}
extern "C" {
    pub fn grin_insert_uint32_to_row(
        arg1: GRIN_GRAPH,
        arg2: GRIN_ROW,
        arg3: ::std::os::raw::c_uint,
    ) -> bool;
}
extern "C" {
    pub fn grin_insert_int64_to_row(
        arg1: GRIN_GRAPH,
        arg2: GRIN_ROW,
        arg3: ::std::os::raw::c_longlong,
    ) -> bool;
}
extern "C" {
    pub fn grin_insert_uint64_to_row(
        arg1: GRIN_GRAPH,
        arg2: GRIN_ROW,
        arg3: ::std::os::raw::c_ulonglong,
    ) -> bool;
}
extern "C" {
    pub fn grin_insert_float_to_row(arg1: GRIN_GRAPH, arg2: GRIN_ROW, arg3: f32) -> bool;
}
extern "C" {
    pub fn grin_insert_double_to_row(arg1: GRIN_GRAPH, arg2: GRIN_ROW, arg3: f64) -> bool;
}
extern "C" {
    pub fn grin_insert_string_to_row(
        arg1: GRIN_GRAPH,
        arg2: GRIN_ROW,
        arg3: *const ::std::os::raw::c_char,
    ) -> bool;
}
extern "C" {
    pub fn grin_insert_date32_to_row(
        arg1: GRIN_GRAPH,
        arg2: GRIN_ROW,
        arg3: ::std::os::raw::c_int,
    ) -> bool;
}
extern "C" {
    pub fn grin_insert_time32_to_row(
        arg1: GRIN_GRAPH,
        arg2: GRIN_ROW,
        arg3: ::std::os::raw::c_int,
    ) -> bool;
}
extern "C" {
    pub fn grin_insert_timestamp64_to_row(
        arg1: GRIN_GRAPH,
        arg2: GRIN_ROW,
        arg3: ::std::os::raw::c_longlong,
    ) -> bool;
}
extern "C" {
    pub fn grin_get_value_from_row(
        arg1: GRIN_GRAPH,
        arg2: GRIN_ROW,
        arg3: GRIN_DATATYPE,
        arg4: usize,
    ) -> *const ::std::os::raw::c_void;
}
extern "C" {
    #[doc = " @brief Get row of values for the entire property list of a vertex.\n Later users can get property values from the row using APIs like\n ``grin_get_int32_from_row``.\n However this two-step value getting is not recommended if the user\n only wants to get the value of one property, in which case, the user\n should use APIs like ``grin_get_vertex_property_value_of_int32``.\n @param GRIN_GRAPH The graph\n @param GRIN_VERTEX The vertex"]
    pub fn grin_get_vertex_row(arg1: GRIN_GRAPH, arg2: GRIN_VERTEX) -> GRIN_ROW;
}
extern "C" {
    pub fn grin_get_edge_row(arg1: GRIN_GRAPH, arg2: GRIN_EDGE) -> GRIN_ROW;
}
extern "C" {
    #[doc = " @brief Get the vertex number of a given type in the graph.\n This API is only available for property graph.\n @param GRIN_GRAPH The graph.\n @param GRIN_VERTEX_TYPE The vertex type.\n @return The vertex number."]
    pub fn grin_get_vertex_num_by_type(arg1: GRIN_GRAPH, arg2: GRIN_VERTEX_TYPE) -> usize;
}
extern "C" {
    pub fn grin_get_edge_num_by_type(arg1: GRIN_GRAPH, arg2: GRIN_EDGE_TYPE) -> usize;
}
extern "C" {
    #[doc = " @brief Get the vertex list of a given type.\n This API is only available for property graph.\n To get a vertex list chain of all types, using APIs in GRIN extension.\n @param GRIN_GRAPH The graph.\n @param GRIN_VERTEX_TYPE The vertex type.\n @return The vertex list of the given type."]
    pub fn grin_get_vertex_list_by_type(
        arg1: GRIN_GRAPH,
        arg2: GRIN_VERTEX_TYPE,
    ) -> GRIN_VERTEX_LIST;
}
extern "C" {
    pub fn grin_get_edge_list_by_type(arg1: GRIN_GRAPH, arg2: GRIN_EDGE_TYPE) -> GRIN_EDGE_LIST;
}
